# anvyl

./: .dockerignore  .gitignore  ACTION_ORIENTED_REFACTOR.md  AGENT_WORKFLOW_GUIDE.md  AI_AGENT_README.md  AUTOMATED_SETUP.md  CLI_FIX_SUMMARY.md  CLI_SUMMARY.md  DOCKER_CLEANUP.md  DOCKER_SETUP.md  DUCKDUCKGO_SEARCH_GUIDE.md  Dockerfile  Dockerfile.agent  Dockerfile.api  Dockerfile.grpc-server  GRPC_SERVER_RESTRUCTURE_SUMMARY.md  INSTALL.md  KOMODO_UI_SUMMARY.md  LMSTUDIO_CONTAINER_SUPPORT.md  LMSTUDIO_IMPLEMENTATION_SUMMARY.md  MANIFEST.in  MODEL_PROVIDERS.md  PACKAGE_RESTRUCTURE_SUMMARY.md  README.md  SETUP.md  _build_hooks.py  anvyl_cli.py  anvyl_grpc_server.py  build_proto_hook.py  cleanup_duplicates.py  cleanup_non_localhost.py  db.py  deploy.py  docker-compose.yml  generate_protos.py  inventory.py  main.py  models.py  proto_utils.py  pyproject.toml  (+8 more)
anvyl/: README_MCP.md  __init__.py  agent_manager.py  ai_agent.py  cli.py  config.py  grpc_client.py  grpc_server.py  infrastructure_api.py  infrastructure_client.py  infrastructure_service.py  mcp_cli.py  model_providers.py  proto_utils.py
anvyl/agent/: __init__.py  agent_manager.py  communication.py  core.py  host_agent.py  server.py  tools.py
anvyl/agents/: deepseek-agent_Dockerfile  deepseek-agent_agent.py  deepseek_Dockerfile  deepseek_agent.py
anvyl/database/: __init__.py  models.py
anvyl/examples/: __init__.py  simple_mcp_client.py  simple_mcp_server.py  test_mcp.py
anvyl/infra/: __init__.py  api.py  client.py  infrastructure_api.py  infrastructure_client.py  service.py
anvyl/mcp/: __init__.py  client.py  config.json  server.py  transport.py  types.py
anvyl/protos/: anvyl.proto
anvyl/sdk/: __init__.py  client.py
anvyl/utils/: __init__.py  background_service.py  service_manager.py
anvyl_sdk/: __init__.py  client.py
api/routes/: hosts.py
database/: models.py
docs/: agent_workflow_guide.md  ai_agent_readme.md  ai_agent_system.md  cli_summary.md  cli_usage.md  docker_cleanup.md  install.md  model_providers.md  test_results_summary.md
examples/: agent_demo.py  ai_agent_example.py  ai_agent_providers_example.py  containerized_agent_example.py  mcp_agent_demo.py
models/: host.py
protos/: anvyl.proto
scripts/: __init__.py  demo_cli.sh  dev_setup.sh  generate_protos.py  install_cli.sh  run_tests.py  start_anvyl_ui.sh  start_ui.sh  stop_anvyl_ui.sh
sdk/: homelab_nomad.py  install_agents.py
src/anvyl/: __init__.py  main.py
src/anvyl/api/: __init__.py
src/anvyl/api/routes/: __init__.py  hosts.py
src/anvyl/db/: __init__.py  session.py
src/anvyl/models/: __init__.py
src/anvyl/sdk/: __init__.py  homelab_nomad.py  install_agents.py
src/sindri/: __init__.py  main.py
src/sindri/api/: __init__.py
src/sindri/api/routes/: __init__.py  hosts.py
src/sindri/db/: __init__.py  session.py
src/sindri/models/: __init__.py  host.py
src/sindri/sdk/: __init__.py  homelab_nomad.py  install_agents.py
src/ui/: Dockerfile.ui  index.html  package.json  postcss.config.cjs  tsconfig.json  vite.config.ts
src/ui/src/: App.tsx
tests/: README.md  __init__.py  conftest.py  test_agent.py  test_anvyl_grpc_server.py  test_client.py  test_mcp_server.py  test_models.py
tests/integration/: test_agent_integration.py  test_cli_integration.py
tests/manual/: __init__.py  test_async_agent.py  test_installation.md
tests/unit/: __init__.py  test_agent.py  test_agent_tools.py  test_anvyl_agent.py  test_cli.py  test_host_agent.py  test_infrastructure_service.py  test_mcp_server_infrastructure.py  test_models.py  test_service_manager.py
ui/: README.md  docker-compose.yml
ui/backend/: Dockerfile  main.py  requirements.txt
ui/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
ui/frontend/src/: App.tsx  index.css
ui/frontend/src/components/: AgentsView.tsx  ContainersView.tsx  Dashboard.tsx  HostsView.tsx  SettingsView.tsx
